manifests/media-entertainment/base/prowlarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  labels:
    gateway: private
    app: prowlarr
spec:
  hostnames:
    - prowlarr.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
